--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,40 @@
-.bg-black{
-    background-color:  black;
+.bg-black {
+  background-color: black;
 }
-img{
-    width : 100%;
-    height: 100%;
+img {
+  width: 100%;
+  height: 100%;
 }
-.font-div{
-     width : 40%;
+.font-div {
+  width: 40%;
 }
-.btn{
-     color : white ;
-}   
-.btn:hover { 
-        color: lightblue;
+.btn {
+  color: white;
 }
-.card
-.card-body{
-    border : 1px solid lightblue;
+.btn:hover {
+  color: lightblue;
 }
-.mapouter{
-    position:relative;
-    text-align:right;
-    height:500px;width:600px;
-    margin:20px;
+.card .card-body {
+  border: 1px solid lightblue;
+}
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 500px;
+  width: 600px;
+  margin: 20px;
 }
 .gmap_canvas {
-    overflow:hidden;
-    background:none!important;
-    height:500px;width:600px;
+  overflow: hidden;
+  background: none !important;
+  height: 500px;
+  width: 600px;
 }
 
 /*/// responsive ///*/
 
-@media only screen and (min-width: 1198px){
-    .font-div{
-        padding : 90px 0px!important;
-
-    } }
+@media only screen and (min-width: 1198px) {
+  .font-div {
+    padding: 90px 0px !important;
+  }
+}
