--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,19 @@ img {
   background-color : lightblue;
   text-align : center;
   font-size : 20px;
-  
-  
+  display : flex;
+  align-items : center;
+  justify-content : space-evenly;
 }
+.linkColor{
+ color : black;
+
+
+}
+
+
+
+
 
 /*/// responsive ///*/
 
