--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,20 @@
 .bg-black {
   background-color : black;
 }
-img {
-  width : 100%;
-  height : 100%;
-}
+
 .font-div {
   width : 40%;
 }
+
 .btn {
   color : white;
 }
+
 .btn:hover {
   color : lightblue;
 }
 
-#quoteDisplay{
+#quoteDisplay {
   height: 30%;
   width: 100%;
   background-color : lightblue;
@@ -25,20 +24,25 @@ img {
   align-items : center;
   justify-content : space-evenly;
 }
-.linkColor{
+
+.linkColor {
  color : black;
-
-
 }
 
-
-
-
-
-/*/// responsive ///*/
+/*/// Responsive ///*/
 
 @media only screen and (min-width: 1198px) {
   .font-div {
-    padding: 90px 0px !important;
+    padding: 90px 0px;
   }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
 }
