--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,44 @@
 .bg-black {
-  background-color : black;
+  background-color: black;
 }
 
 .font-div {
-  width : 40%;
+  width: 40%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
 
 .btn {
-  color : white;
+  color: white;
 }
 
 .btn:hover {
-  color : lightblue;
+  color: lightblue;
 }
 
 #quoteDisplay {
   height: 30%;
   width: 100%;
-  background-color : lightblue;
-  text-align : center;
-  font-size : 20px;
-  display : flex;
-  align-items : center;
-  justify-content : space-evenly;
+  background-color: lightblue;
+  text-align: center;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .linkColor {
- color : black;
+ color: black;
 }
 
 /*/// Responsive ///*/
 
 @media only screen and (min-width: 1198px) {
   .font-div {
-    padding: 90px 0px;
+    padding: 90px 0px !important;
   }
 }
 
