--- a/css/style.css
+++ b/css/style.css
@@ -1,113 +1,127 @@
 .bg-black {
-  background-color: black;
+    background-color: darkturquoise;
 }
 
 .font-div {
-  width: 40%;
+    width: 40%;
 }
 
 img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .btn {
-  color: white;
+    color: white;
 }
 
 .btn:hover {
-  color: lightblue;
+    color: lightblue;
 }
 
 #quoteDisplay {
-  height: 30%;
-  width: 100%;
-  background-color: lightblue;
-  text-align: center;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+    height: 30%;
+    width: 100%;
+    background-color: lightblue;
+    text-align: center;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .linkColor {
- color: black;
+    color: black;
 }
 
-.treebtn{
-  align-items: center;
-  border-radius: 10px;
-  margin:20px;
+.treebtn {
+    align-items: center;
+    border-radius: 10px;
+    margin: 20px;
 }
+
+.fa-3x {
+    font-size: 3em;
+    padding-top: 20px;
+}
+
+.card-header {
+    background-color: white;
+}
+
+html {
+    overflow-y: scroll;
+}
+
 
 /*/// Responsive ///*/
 
 @media only screen and (min-width: 1198px) {
-  .font-div {
-    padding: 90px 0px !important;
-  } 
-  .hicons div > a {
-    margin-right: 25px;
-  }
-  
+    .font-div {
+        padding: 90px 0px !important;
+    }
+    .hicons div>a {
+        margin-right: 25px;
+    }
 }
+
 
 /* Extra small devices (phones, 600px and down) */
+
 @media only screen and (max-width: 600px) {
-  .display-4{
-    font-size: 1.8rem;
-
-}
-  .hicons {
-  flex-direction: column !important;
-
-}
- .hicons div > a {
-   margin-right: 25px;
-
-}
-.container {
-  padding: 0px;
-}
-
-h2,
-h5,
-h6{
-  text-align: center;
-}
-
-.flex-lg-row{
-  border:1px solid white;
-}
-
-.treebtn{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  border-radius: 10px;
-  margin:20px;
-}
-.image{
-  
-  padding: 10px;
-  background-color: black;
+    .display-4 {
+        font-size: 1.8rem;
+    }
+    .hicons {
+        flex-direction: column !important;
+    }
+    .hicons div>a {
+        margin-right: 25px;
+    }
+    .container {
+        padding: 0px;
+    }
+    h2,
+    h5,
+    h6 {
+        text-align: center;
+    }
+    .flex-lg-row {
+        border: 1px solid white;
+    }
+    .treebtn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        border-radius: 10px;
+        margin: 20px;
+    }
+    .image {
+        padding: 10px;
+        background-color: black;
+    }
 }
 
-
+body {
+    background: url('http://getwallpapers.com/wallpaper/full/d/1/b/419066.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
+
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
+
 @media only screen and (min-width: 600px) {
-  .font-div {
-    padding: 60px 0px !important;
-  } 
-  .hicons {
-    flex-direction: column !important;
-  
-  }
-   .hicons div > a {
-     margin-right: 25px;
-  
-  }
+    .font-div {
+        padding: 60px 0px !important;
+    }
+    .hicons {
+        flex-direction: column !important;
+    }
+    .hicons div>a {
+        margin-right: 25px;
+    }
 }
