--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,21 @@ body {
   color: #4e4e4e;
 }
 
+.date {
+  text-align: center;
+}
+
+.company-logo {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  height: 70px;
+}
+
+.img-fluid {
+  height: 200px;
+}
+
 h1,
 h2,
 h3,
